--- a/movie finder/index.html
+++ b/movie finder/index.html
@@ -18,7 +18,7 @@
     <div class="movie-cards"></div>
 	<div class="sticky">
 		<footer class="footer">
-			<h4>Created By Payal Sinha</h4>
+			<h4>Created By Aditya Ranjan Sinha</h4>
 		</footer>
 	</div>
 
